software/pcx86/sys/dos/microsoft/6.20/README.md
---
layout: page
title: Microsoft MS-DOS 6.20 (1.2M Disks)
permalink: /software/pcx86/sys/dos/microsoft/6.20/
redirect_from: /disks/pcx86/dos/microsoft/6.20/1200K/
machines:
  - id: ibm5170-msdos620
    type: pcx86
    config: /devices/pcx86/machine/5170/ega/640kb/rev1/machine.xml
    autoMount:
      A:
        name: MS-DOS 6.20 (1.2M Disk 1)
---

Microsoft MS-DOS 6.20 (1.2M Disks)
----------------------------------

[Directory Listings](#directory-of-ms-dos-620-12m-disk-1) of the five 1.2M distribution diskettes are provided below.

### Directory of MS-DOS 6.20 (1.2M Disk 1)

	 Volume in drive A is DISK      1
	 Volume Serial Number is 0234-0311

	Directory of A:\

	IO       SYS     40566 09-30-93   6:20a
	MSDOS    SYS     38138 09-30-93   6:20a
	COMMAND  COM     54619 09-30-93   6:20a
	DBLSPACE BIN     64246 09-30-93   6:20a
	ATTRIB   EXE     11208 09-30-93   6:20a
	AUTOEXEC BAT        37 09-30-93   6:20a
	CHKDSK   EXE     12241 09-30-93   6:20a
	CONFIG   SYS        13 09-30-93   6:20a
	COUNTRY  SYS     19546 09-30-93   6:20a
	DEBUG    EXE     15718 09-30-93   6:20a
	DOSSETUP INI      3094 09-30-93   6:20a
	EDIT     COM       413 09-30-93   6:20a
	EXPAND   EXE     16129 09-30-93   6:20a
	FDISK    EXE     29334 09-30-93   6:20a
	FORMAT   COM     22916 09-30-93   6:20a
	HELP     HL_    267126 09-30-93   6:20a
	KEYB     COM     15750 09-30-93   6:20a
	KEYBOARD SYS     34598 09-30-93   6:20a
	MEM      EX_     19512 09-30-93   6:20a
	NLSFUNC  EXE      7036 09-30-93   6:20a
	PACKING  LST      6161 09-30-93   6:20a
	QBASIC   EXE    194309 09-30-93   6:20a
	README   TXT     59813 09-30-93   6:20a
	SCANDISK EXE    119761 09-30-93   6:20a
	SCANDISK INI      6470 09-30-93   6:20a
	SETUP    EXE     72601 09-30-93   6:20a
	SETUP    MSG      1392 09-30-93   6:20a
	SYS      COM      9432 09-30-93   6:20a
	XCOPY    EX_     11093 09-30-93   6:20a
	       29 file(s)    1153272 bytes

	Total files listed:
	       29 file(s)    1153272 bytes
	                       53760 bytes free

### Directory of MS-DOS 6.20 (1.2M Disk 2)

	 Volume in drive A is DISK      2
	 Volume Serial Number is 2B1C-0411

	Directory of A:\

	ANSI     SY_      6260 09-30-93   6:20a
	APPEND   EX_      7467 09-30-93   6:20a
	CHKSTATE SY_     16770 09-30-93   6:20a
	CHOICE   COM      1754 09-30-93   6:20a
	DBLSPACE EXE    177034 09-30-93   6:20a
	DBLSPACE HL_     24852 09-30-93   6:20a
	DBLSPACE IN_      1256 09-30-93   6:20a
	DBLSPACE SY_      8387 09-30-93   6:20a
	DBLWIN   HL_      4205 09-30-93   6:20a
	DELTREE  EX_      7249 09-30-93   6:20a
	DISKCOMP CO_      6762 09-30-93   6:20a
	DISKCOPY CO_      8306 09-30-93   6:20a
	DISPLAY  SY_      9797 09-30-93   6:20a
	DOSHELP  HL_      2492 09-30-93   6:20a
	DOSKEY   CO_      4213 09-30-93   6:20a
	DRIVER   SY_      4030 09-30-93   6:20a
	EDIT     HL_     15709 09-30-93   6:20a
	EGA      CP_     18340 09-30-93   6:20a
	EMM386   EX_     50079 09-30-93   6:20a
	FASTHELP EX_      7539 09-30-93   6:20a
	FASTOPEN EX_      7829 09-30-93   6:20a
	FC       EX_     12065 09-30-93   6:20a
	FIND     EX_      4880 09-30-93   6:20a
	GRAPHICS CO_     11375 09-30-93   6:20a
	HELP     COM       413 09-30-93   6:20a
	HIMEM    SY_     10064 09-30-93   6:20a
	INTERLNK EX_     10720 09-30-93   6:20a
	INTERSVR EX_     26446 09-30-93   6:20a
	LOADFIX  CO_       649 09-30-93   6:20a
	MEMMAKER EXE    119557 09-30-93   6:20a
	MEMMAKER IN_      1306 09-30-93   6:20a
	MEMMAKER HL_      6017 09-30-93   6:20a
	MODE     CO_     14899 09-30-93   6:20a
	MORE     COM      2545 09-30-93   6:20a
	MOVE     EX_     11957 09-30-93   6:20a
	MSCDEX   EXE     25361 09-30-93   6:20a
	MSD      COM       867 09-30-93   6:20a
	MSD      EXE    158470 09-30-93   6:20a
	MWBACKUP EX_    159138 09-30-93   6:20a
	NETWORKS TXT     20553 09-30-93   6:20a
	POWER    EX_      5549 09-30-93   6:20a
	QBASIC   HL_    113105 09-30-93   6:20a
	RAMDRIVE SY_      3282 09-30-93   6:20a
	REPLACE  EX_     12835 09-30-93   6:20a
	SHARE    EX_      8120 09-30-93   6:20a
	SUBST    EX_     12740 09-30-93   6:20a
	VFINTD   38_      1289 09-30-93   6:20a
	WINA20   38_      2661 09-30-93   6:20a
	       48 file(s)    1147193 bytes

	Total files listed:
	       48 file(s)    1147193 bytes
	                       55296 bytes free

### Directory of MS-DOS 6.20 (1.2M Disk 3)

	 Volume in drive A is DISK      3
	 Volume Serial Number is 4B03-0511

	Directory of A:\

	DEFRAG   EXE     79177 09-30-93   6:20a
	DEFRAG   HL_      4284 09-30-93   6:20a
	EGA2     CP_     18569 09-30-93   6:20a
	GRAPHICS PR_      3883 09-30-93   6:20a
	KEYBRD2  SY_     13942 09-30-93   6:20a
	LABEL    EX_      6176 09-30-93   6:20a
	MONOUMB  38_       950 09-30-93   6:20a
	MSBACKDB OVL     63098 09-30-93   6:20a
	MSBACKDR OVL     66906 09-30-93   6:20a
	MSBACKFB OVL     69066 09-30-93   6:20a
	MSBACKFR OVL     72474 09-30-93   6:20a
	MSBACKUP EX_      2487 09-30-93   6:20a
	MSBACKUP HL_    112396 09-30-93   6:20a
	MSBACKUP OVL    133952 09-30-93   6:20a
	MSBCONFG HL_     18549 09-30-93   6:20a
	MSBCONFG OVL     47210 09-30-93   6:20a
	MWBACKF  DL_      6956 09-30-93   6:20a
	MWBACKR  DL_     30277 09-30-93   6:20a
	MWBACKUP HL_    141281 09-30-93   6:20a
	MWGRAFIC DL_     18094 09-30-93   6:20a
	MWUNDEL  EX_     66012 09-30-93   6:20a
	MWUNDEL  HL_     17458 09-30-93   6:20a
	PRINT    EX_      9614 09-30-93   6:20a
	RESTORE  EX_     23380 09-30-93   6:20a
	SETVER   EX_      6649 09-30-93   6:20a
	SIZER    EX_      4136 09-30-93   6:20a
	SMARTDRV EX_     15478 09-30-93   6:20a
	SMARTMON EX_     13747 09-30-93   6:20a
	SMARTMON HL_      7319 09-30-93   6:20a
	SORT     EX_      4355 09-30-93   6:20a
	TREE     CO_      4794 09-30-93   6:20a
	UNDELETE EXE     26416 09-30-93   6:20a
	WNTOOLS  GR_      1071 09-30-93   6:20a
	       33 file(s)    1110156 bytes

	Total files listed:
	       33 file(s)    1110156 bytes
	                       95232 bytes free

### Directory of MS-DOS 6.20 (1.2M Disk 4)

	 Volume in drive A is DISK      4
	 Volume Serial Number is 601C-0511

	Directory of A:\

	MSAV     EXE    172198 09-30-93   6:20a
	MSAV     HL_     12230 09-30-93   6:20a
	MSAVHELP OV_     17796 09-30-93   6:20a
	MSAVIRUS LS_     11473 09-30-93   6:20a
	MSTOOLS  DL_      8376 09-30-93   6:20a
	MWAV     EX_     65629 09-30-93   6:20a
	MWAV     HL_     12070 09-30-93   6:20a
	MWAVABSI DL_     23085 09-30-93   6:20a
	MWAVDLG  DL_     10232 09-30-93   6:20a
	MWAVDOSL DL_     19702 09-30-93   6:20a
	MWAVDRVL DL_      4219 09-30-93   6:20a
	MWAVMGR  DL_      9569 09-30-93   6:20a
	MWAVSCAN DL_     70797 09-30-93   6:20a
	MWAVSOS  DL_      3983 09-30-93   6:20a
	MWAVTSR  EX_      8445 09-30-93   6:20a
	UNFORMAT COM     12738 09-30-93   6:20a
	VSAFE    CO_     33046 09-30-93   6:20a
	       17 file(s)     495588 bytes

	Total files listed:
	       17 file(s)     495588 bytes
	                      714240 bytes free

### Directory of MS-DOS 6.20 (1.2M Supp Disk)

	 Volume in drive A is SUPPDISK  1
	 Volume Serial Number is 0537-0A0E

	Directory of A:\

	ADOS     CFG        61 09-30-93   6:20a
	ADOS     CO_     17911 09-30-93   6:20a
	ADOS     OV_     45289 09-30-93   6:20a
	ADOS     TX_     40535 09-30-93   6:20a
	AM       EXE      8999 09-30-93   6:20a
	AREADME  TX_     12274 09-30-93   6:20a
	FAKEMOUS COM       307 09-30-93   6:20a
	DVORAK   SY_      1779 09-30-93   6:20a
	DVORAK   TX_      3210 09-30-93   6:20a
	KBDBUF   SYS       880 09-30-93   6:20a
	DBLBOOT  BA_      1087 09-30-93   6:20a
	ASSIGN   CO_      4547 09-30-93   6:20a
	BACKUP   EX_     22966 09-30-93   6:20a
	COMP     EX_      8738 09-30-93   6:20a
	CV       COM       716 09-30-93   6:20a
	EDLIN    EXE     12674 09-30-93   6:20a
	EXE2BIN  EX_      5983 09-30-93   6:20a
	GRAFTABL CO_      6076 09-30-93   6:20a
	JOIN     EX_     12233 09-30-93   6:20a
	4201     CP_      2399 09-30-93   6:20a
	4208     CP_       359 09-30-93   6:20a
	5202     CP_       260 09-30-93   6:20a
	LCD      CP_      2793 09-30-93   6:20a
	MIRROR   CO_     11424 09-30-93   6:20a
	MSHERC   CO_      4086 09-30-93   6:20a
	PRINTER  SY_     10959 09-30-93   6:20a
	PRINTFIX COM       234 09-30-93   6:20a
	GORILLA  BA_     10439 09-30-93   6:20a
	REMLINE  BA_      4435 09-30-93   6:20a
	NIBBLES  BA_      7182 09-30-93   6:20a
	MONEY    BA_     13049 09-30-93   6:20a
	COMMANDS TX_     24728 09-30-93   6:20a
	SETUP    BAT     13049 09-30-93   6:20a
	SD6COPY  BAT       758 09-30-93   6:20a
	CHOICE   COM      1754 09-30-93   6:20a
	EXPAND   EXE     16129 09-30-93   6:20a
	GET_FUNC COM        24 09-30-93   6:20a
	NET      1X_      4704 09-30-93   6:20a
	NETBEUI  DO_     21122 09-30-93   6:20a
	NETWKSTA 1X_     38186 09-30-93   6:20a
	NETWKSTA 2X_     60768 09-30-93   6:20a
	REDIR    1X_     19627 09-30-93   6:20a
	REDIR    2X_     20033 09-30-93   6:20a
	SETNAME  EX_      3131 09-30-93   6:20a
	8514     VI_      6421 09-30-93   6:20a
	CGA      GR_      1617 09-30-93   6:20a
	CGA      IN_      2775 09-30-93   6:20a
	CGA      VI_      6131 09-30-93   6:20a
	DOSSHELL CO_      1907 09-30-93   6:20a
	DOSSHELL EX_    142511 09-30-93   6:20a
	DOSSHELL HL_     48773 09-30-93   6:20a
	DOSSWAP  EX_     13498 09-30-93   6:20a
	EGA      GR_      2466 09-30-93   6:20a
	EGA      IN_      2776 09-30-93   6:20a
	EGA      SY_      3684 09-30-93   6:20a
	EGA      VI_      6160 09-30-93   6:20a
	EGAMONO  GR_      2318 09-30-93   6:20a
	HERC     GR_      1636 09-30-93   6:20a
	HERC     VI_      6271 09-30-93   6:20a
	MONO     GR_       296 09-30-93   6:20a
	MONO     IN_      2451 09-30-93   6:20a
	VGA      GR_      3198 09-30-93   6:20a
	VGA      VI_      6355 09-30-93   6:20a
	VGAMONO  GR_      3214 09-30-93   6:20a
	720ID01  BAT        42 09-30-93   6:20a
	720ID02  BAT        42 09-30-93   6:20a
	       66 file(s)     762439 bytes

	Total files listed:
	       66 file(s)     762439 bytes
	                      433152 bytes free
