software/pcx86/sys/dos/microsoft/6.22/README.md
---
layout: page
title: Microsoft MS-DOS 6.22
permalink: /software/pcx86/sys/dos/microsoft/6.22/
redirect_from:
  - /disks/pcx86/dos/microsoft/6.22/1200K/
  - /disks/pcx86/dos/microsoft/6.22/1440K/
  - /disks/pcx86/dos/microsoft/6.22/
machines:
  - id: ibm5170-msdos622
    type: pcx86
    config: /machines/pcx86/ibm/5170/ega/640kb/rev1/machine.xml
    autoMount:
      A:
        name: MS-DOS 6.22 (1.2M Disk 1)
---

Directory listings of the [four 1.2M](#directory-of-ms-dos-622-12m-disk-1) and [four 1.44M](#directory-of-ms-dos-622-144m-disk-1)
distribution diskettes are provided below.

{% include machine.html id="ibm5170-msdos622" %}

### Directory of MS-DOS 6.22 (1.2M Disk 1)

     Volume in drive A is DISK      1
     Directory of A:\

    IO       SYS*    40774   5-31-94   6:22a
    MSDOS    SYS*    38138   5-31-94   6:22a
    COMMAND  COM     54645   5-31-94   6:22a
    ATTRIB   EXE     11208   5-31-94   6:22a
    AUTOEXEC BAT        37   5-31-94   6:22a
    CHKDSK   EXE     12241   5-31-94   6:22a
    CONFIG   SYS        13   5-31-94   6:22a
    COUNTRY  SYS     26936   5-31-94   6:22a
    COUNTRY  TX_      5241   5-31-94   6:22a
    DEBUG    EXE     15718   5-31-94   6:22a
    DOSSETUP INI      3156   5-31-94   6:22a
    DRVSPACE BIN     66294   5-31-94   6:22a
    EDIT     COM       413   5-31-94   6:22a
    EXPAND   EXE     16129   5-31-94   6:22a
    FDISK    EXE     29336   5-31-94   6:22a
    FORMAT   COM     22974   5-31-94   6:22a
    KEYB     COM     15750   5-31-94   6:22a
    KEYBOARD SYS     34598   5-31-94   6:22a
    MEM      EX_     19512   5-31-94   6:22a
    NETWORKS TXT     17465   5-31-94   6:22a
    NLSFUNC  EXE      7036   5-31-94   6:22a
    PACKING  LST      6265   5-31-94   6:22a
    QBASIC   EXE    194309   5-31-94   6:22a
    README   TXT     60646   5-31-94   6:22a
    REPLACE  EX_     12835   5-31-94   6:22a
    RESTORE  EX_     23380   5-31-94   6:22a
    SCANDISK EXE    124262   5-31-94   6:22a
    SCANDISK INI      6920   5-31-94   6:22a
    SETUP    EXE     72842   5-31-94   6:22a
    SETUP    MSG      1830   5-31-94   6:22a
    SYS      COM      9432   5-31-94   6:22a
    XCOPY    EX_     11093   5-31-94   6:22a
           32 file(s)     961428 bytes
                          244224 bytes free

### Directory of MS-DOS 6.22 (1.2M Disk 2)

     Volume in drive A is DISK      2
     Directory of A:\

    ANSI     SY_      6261   5-31-94   6:22a
    APPEND   EX_      7467   5-31-94   6:22a
    CHKSTATE SY_     16770   5-31-94   6:22a
    CHOICE   COM      1754   5-31-94   6:22a
    DBLWIN   HL_      5087   5-31-94   6:22a
    DEFRAG   EXE     79065   5-31-94   6:22a
    DEFRAG   HL_      4284   5-31-94   6:22a
    DELTREE  EX_      7249   5-31-94   6:22a
    DISKCOMP CO_      6762   5-31-94   6:22a
    DISKCOPY CO_      8306   5-31-94   6:22a
    DISPLAY  SY_      9797   5-31-94   6:22a
    DOSHELP  HL_      2576   5-31-94   6:22a
    DOSKEY   CO_      4213   5-31-94   6:22a
    DRVSPACE EXE    181840   5-31-94   6:22a
    DRVSPACE HL_     28521   5-31-94   6:22a
    DRVSPACE IN_      1272   5-31-94   6:22a
    DRVSPACE SY_      8518   5-31-94   6:22a
    DRVSPACE TX_     13210   5-31-94   6:22a
    EGA      CP_     18340   5-31-94   6:22a
    EGA2     CP_     19049   5-31-94   6:22a
    EGA3     CP_     15558   5-31-94   6:22a
    EMM386   EX_     50058   5-31-94   6:22a
    ISO      CP_     15240   5-31-94   6:22a
    KEYBRD2  SY_     11759   5-31-94   6:22a
    MSCDEX   EXE     25361   5-31-94   6:22a
    MSD      EXE    165864   5-31-94   6:22a
    VFINTD   38_      1289   5-31-94   6:22a
           27 file(s)     715470 bytes
                          491520 bytes free

### Directory of MS-DOS 6.22 (1.2M Disk 3)

     Volume in drive A is DISK      3
     Directory of A:\

    DRIVER   SY_      4032   5-31-94   6:22a
    EDIT     HL_     15709   5-31-94   6:22a
    FASTHELP EX_      7539   5-31-94   6:22a
    FASTOPEN EX_      7829   5-31-94   6:22a
    FC       EX_     12065   5-31-94   6:22a
    FIND     EX_      4879   5-31-94   6:22a
    GRAPHICS CO_     11376   5-31-94   6:22a
    GRAPHICS PR_      3883   5-31-94   6:22a
    HELP     COM       413   5-31-94   6:22a
    HELP     HL_    270925   5-31-94   6:22a
    HIMEM    SY_     10064   5-31-94   6:22a
    INTERLNK EX_     10720   5-31-94   6:22a
    INTERSVR EX_     26446   5-31-94   6:22a
    LABEL    EX_      6176   5-31-94   6:22a
    LOADFIX  CO_       649   5-31-94   6:22a
    MEMMAKER EXE    119557   5-31-94   6:22a
    MEMMAKER HL_      6017   5-31-94   6:22a
    MEMMAKER IN_      1306   5-31-94   6:22a
    MODE     CO_     14899   5-31-94   6:22a
    MONOUMB  38_       950   5-31-94   6:22a
    MORE     COM      2545   5-31-94   6:22a
    MOVE     EX_     11957   5-31-94   6:22a
    MSBACKUP EX_      2487   5-31-94   6:22a
    MSBACKUP HL_    112396   5-31-94   6:22a
    MSBACKUP OVL    133936   5-31-94   6:22a
    MSBCONFG HL_     18549   5-31-94   6:22a
    MSBCONFG OVL     47210   5-31-94   6:22a
    MSTOOLS  DL_      8665   5-31-94   6:22a
    MWBACKR  DL_     30406   5-31-94   6:22a
    POWER    EX_      5549   5-31-94   6:22a
    PRINT    EX_      9618   5-31-94   6:22a
    QBASIC   HL_    113105   5-31-94   6:22a
    RAMDRIVE SY_      3282   5-31-94   6:22a
    SETVER   EX_      6617   5-31-94   6:22a
    SHARE    EX_      8120   5-31-94   6:22a
    SIZER    EX_      4136   5-31-94   6:22a
    SMARTDRV EX_     15480   5-31-94   6:22a
    SMARTMON EX_     13747   5-31-94   6:22a
    SMARTMON HL_      7319   5-31-94   6:22a
    SORT     EX_      4360   5-31-94   6:22a
    SUBST    EX_     12741   5-31-94   6:22a
    TREE     CO_      4795   5-31-94   6:22a
    UNFORMAT COM     12738   5-31-94   6:22a
    WINA20   38_      2661   5-31-94   6:22a
           44 file(s)    1127853 bytes
                           76288 bytes free

### Directory of MS-DOS 6.22 (1.2M Disk 4)

     Volume in drive A is DISK      4
     Directory of A:\

    MSAV     EXE    172198   5-31-94   6:22a
    MSAV     HL_     12230   5-31-94   6:22a
    MSAVHELP OV_     17796   5-31-94   6:22a
    MSAVIRUS LS_     11473   5-31-94   6:22a
    MSBACKDB OVL     63994   5-31-94   6:22a
    MSBACKDR OVL     68074   5-31-94   6:22a
    MSBACKFB OVL     69530   5-31-94   6:22a
    MSBACKFR OVL     73706   5-31-94   6:22a
    MWAV     EX_     65629   5-31-94   6:22a
    MWAV     HL_     12070   5-31-94   6:22a
    MWAVABSI DL_     23085   5-31-94   6:22a
    MWAVDLG  DL_     10232   5-31-94   6:22a
    MWAVDOSL DL_     19702   5-31-94   6:22a
    MWAVDRVL DL_      4219   5-31-94   6:22a
    MWAVMGR  DL_      9569   5-31-94   6:22a
    MWAVSCAN DL_     70797   5-31-94   6:22a
    MWAVSOS  DL_      3983   5-31-94   6:22a
    MWAVTSR  EX_      8445   5-31-94   6:22a
    MWBACKF  DL_      6956   5-31-94   6:22a
    MWBACKUP EX_    159943   5-31-94   6:22a
    MWBACKUP HL_    141281   5-31-94   6:22a
    MWGRAFIC DL_     18094   5-31-94   6:22a
    MWUNDEL  EX_     66012   5-31-94   6:22a
    MWUNDEL  HL_     17458   5-31-94   6:22a
    UNDELETE EXE     26416   5-31-94   6:22a
    VSAFE    CO_     33046   5-31-94   6:22a
    WNTOOLS  GR_      1071   5-31-94   6:22a
           27 file(s)    1187009 bytes
                           20992 bytes free

### Directory of MS-DOS 6.22 (1.44M Disk 1)

     Volume in drive A is DISK      1
     Directory of A:\

    IO       SYS*    40774   5-31-94   6:22a
    MSDOS    SYS*    38138   5-31-94   6:22a
    COMMAND  COM     54645   5-31-94   6:22a
    ATTRIB   EXE     11208   5-31-94   6:22a
    AUTOEXEC BAT        37   5-31-94   6:22a
    CHKDSK   EXE     12241   5-31-94   6:22a
    CONFIG   SYS        13   5-31-94   6:22a
    COUNTRY  SYS     26936   5-31-94   6:22a
    COUNTRY  TX_      5241   5-31-94   6:22a
    DEBUG    EXE     15718   5-31-94   6:22a
    DEFRAG   EXE     79065   5-31-94   6:22a
    DEFRAG   HL_      4284   5-31-94   6:22a
    DOSSETUP INI      3114   5-31-94   6:22a
    DRVSPACE BIN     66294   5-31-94   6:22a
    EDIT     COM       413   5-31-94   6:22a
    EGA      CP_     18340   5-31-94   6:22a
    EGA2     CP_     19049   5-31-94   6:22a
    EGA3     CP_     15558   5-31-94   6:22a
    EMM386   EX_     50058   5-31-94   6:22a
    EXPAND   EXE     16129   5-31-94   6:22a
    FDISK    EXE     29336   5-31-94   6:22a
    FORMAT   COM     22974   5-31-94   6:22a
    ISO      CP_     15240   5-31-94   6:22a
    KEYB     COM     15750   5-31-94   6:22a
    KEYBOARD SYS     34598   5-31-94   6:22a
    KEYBRD2  SY_     11759   5-31-94   6:22a
    MEM      EX_     19512   5-31-94   6:22a
    MSCDEX   EXE     25361   5-31-94   6:22a
    NETWORKS TXT     17465   5-31-94   6:22a
    NLSFUNC  EXE      7036   5-31-94   6:22a
    PACKING  LST      6237   5-31-94   6:22a
    QBASIC   EXE    194309   5-31-94   6:22a
    README   TXT     60646   5-31-94   6:22a
    REPLACE  EX_     12835   5-31-94   6:22a
    RESTORE  EX_     23380   5-31-94   6:22a
    SCANDISK EXE    124262   5-31-94   6:22a
    SCANDISK INI      6920   5-31-94   6:22a
    SETUP    EXE     72842   5-31-94   6:22a
    SETUP    MSG      1830   5-31-94   6:22a
    SYS      COM      9432   5-31-94   6:22a
    XCOPY    EX_     11093   5-31-94   6:22a
           41 file(s)    1200072 bytes
                          247296 bytes free

### Directory of MS-DOS 6.22 (1.44M Disk 2)

     Volume in drive A is DISK      2
     Directory of A:\

    ANSI     SY_      6261   5-31-94   6:22a
    APPEND   EX_      7467   5-31-94   6:22a
    CHKSTATE SY_     16770   5-31-94   6:22a
    CHOICE   COM      1754   5-31-94   6:22a
    DBLWIN   HL_      5087   5-31-94   6:22a
    DELTREE  EX_      7249   5-31-94   6:22a
    DISKCOMP CO_      6762   5-31-94   6:22a
    DISKCOPY CO_      8306   5-31-94   6:22a
    DISPLAY  SY_      9797   5-31-94   6:22a
    DOSHELP  HL_      2576   5-31-94   6:22a
    DOSKEY   CO_      4213   5-31-94   6:22a
    DRIVER   SY_      4032   5-31-94   6:22a
    DRVSPACE EXE    181840   5-31-94   6:22a
    DRVSPACE HL_     28521   5-31-94   6:22a
    DRVSPACE IN_      1272   5-31-94   6:22a
    DRVSPACE SY_      8518   5-31-94   6:22a
    DRVSPACE TX_     13210   5-31-94   6:22a
    EDIT     HL_     15709   5-31-94   6:22a
    FASTHELP EX_      7539   5-31-94   6:22a
    FASTOPEN EX_      7829   5-31-94   6:22a
    FC       EX_     12065   5-31-94   6:22a
    FIND     EX_      4879   5-31-94   6:22a
    GRAPHICS CO_     11376   5-31-94   6:22a
    GRAPHICS PR_      3883   5-31-94   6:22a
    HELP     COM       413   5-31-94   6:22a
    HELP     HL_    270925   5-31-94   6:22a
    HIMEM    SY_     10064   5-31-94   6:22a
    INTERLNK EX_     10720   5-31-94   6:22a
    INTERSVR EX_     26446   5-31-94   6:22a
    LABEL    EX_      6176   5-31-94   6:22a
    LOADFIX  CO_       649   5-31-94   6:22a
    MEMMAKER EXE    119557   5-31-94   6:22a
    MEMMAKER HL_      6017   5-31-94   6:22a
    MEMMAKER IN_      1306   5-31-94   6:22a
    MODE     CO_     14899   5-31-94   6:22a
    MONOUMB  38_       950   5-31-94   6:22a
    MORE     COM      2545   5-31-94   6:22a
    MOVE     EX_     11957   5-31-94   6:22a
    MSBACKUP EX_      2487   5-31-94   6:22a
    MSBCONFG HL_     18549   5-31-94   6:22a
    MSBCONFG OVL     47210   5-31-94   6:22a
    MSD      EXE    165864   5-31-94   6:22a
    MSTOOLS  DL_      8665   5-31-94   6:22a
    MWBACKR  DL_     30406   5-31-94   6:22a
    POWER    EX_      5549   5-31-94   6:22a
    PRINT    EX_      9618   5-31-94   6:22a
    QBASIC   HL_    113105   5-31-94   6:22a
    RAMDRIVE SY_      3282   5-31-94   6:22a
    SETVER   EX_      6617   5-31-94   6:22a
    SHARE    EX_      8120   5-31-94   6:22a
    SIZER    EX_      4136   5-31-94   6:22a
    SMARTDRV EX_     15480   5-31-94   6:22a
    SMARTMON EX_     13747   5-31-94   6:22a
    SMARTMON HL_      7319   5-31-94   6:22a
    SORT     EX_      4360   5-31-94   6:22a
    SUBST    EX_     12741   5-31-94   6:22a
    TREE     CO_      4795   5-31-94   6:22a
    UNFORMAT COM     12738   5-31-94   6:22a
    VFINTD   38_      1289   5-31-94   6:22a
    WINA20   38_      2661   5-31-94   6:22a
           60 file(s)    1358277 bytes
                           84992 bytes free

### Directory of MS-DOS 6.22 (1.44M Disk 3)

     Volume in drive A is DISK      3
     Directory of A:\

    MSAV     EXE    172198   5-31-94   6:22a
    MSAV     HL_     12230   5-31-94   6:22a
    MSAVHELP OV_     17796   5-31-94   6:22a
    MSAVIRUS LS_     11473   5-31-94   6:22a
    MSBACKDB OVL     63994   5-31-94   6:22a
    MSBACKDR OVL     68074   5-31-94   6:22a
    MSBACKFB OVL     69530   5-31-94   6:22a
    MSBACKFR OVL     73706   5-31-94   6:22a
    MSBACKUP HL_    112396   5-31-94   6:22a
    MSBACKUP OVL    133936   5-31-94   6:22a
    MWAV     EX_     65629   5-31-94   6:22a
    MWAV     HL_     12070   5-31-94   6:22a
    MWAVABSI DL_     23085   5-31-94   6:22a
    MWAVDLG  DL_     10232   5-31-94   6:22a
    MWAVDOSL DL_     19702   5-31-94   6:22a
    MWAVDRVL DL_      4219   5-31-94   6:22a
    MWAVMGR  DL_      9569   5-31-94   6:22a
    MWAVSCAN DL_     70797   5-31-94   6:22a
    MWAVSOS  DL_      3983   5-31-94   6:22a
    MWAVTSR  EX_      8445   5-31-94   6:22a
    MWBACKF  DL_      6956   5-31-94   6:22a
    MWBACKUP EX_    159943   5-31-94   6:22a
    MWBACKUP HL_    141281   5-31-94   6:22a
    MWGRAFIC DL_     18094   5-31-94   6:22a
    MWUNDEL  EX_     66012   5-31-94   6:22a
    MWUNDEL  HL_     17458   5-31-94   6:22a
    UNDELETE EXE     26416   5-31-94   6:22a
    VSAFE    CO_     33046   5-31-94   6:22a
    WNTOOLS  GR_      1071   5-31-94   6:22a
           29 file(s)    1433341 bytes
                           17920 bytes free

### Directory of MS-DOS 6.22 (1.44M Supp)

     Volume in drive A is SUPPDISK  1
     Directory of A:\

    ADOS     CFG        61   5-31-94   6:22a
    ADOS     CO_     17911   5-31-94   6:22a
    ADOS     OV_     45289   5-31-94   6:22a
    ADOS     TX_     40535   5-31-94   6:22a
    AM       EXE      7825   5-31-94   6:22a
    AREADME  TX_     12280   5-31-94   6:22a
    FAKEMOUS COM       307   5-31-94   6:22a
    DRVBOOT  BA_      1277   5-31-94   6:22a
    DVORAK   SY_      1779   5-31-94   6:22a
    DVORAK   TX_      3215   5-31-94   6:22a
    KBDBUF   SYS      1140   5-31-94   6:22a
    ISO      CP_     15240   5-31-94   6:22a
    ISO      TXT      2761   5-31-94   6:22a
    ASSIGN   CO_      4547   5-31-94   6:22a
    BACKUP   EX_     22966   5-31-94   6:22a
    COMP     EX_      8738   5-31-94   6:22a
    CV       COM       716   5-31-94   6:22a
    EDLIN    EXE     12674   5-31-94   6:22a
    EXE2BIN  EX_      5983   5-31-94   6:22a
    GRAFTABL CO_      6078   5-31-94   6:22a
    JOIN     EX_     12237   5-31-94   6:22a
    4201     CP_      2399   5-31-94   6:22a
    4208     CP_       359   5-31-94   6:22a
    5202     CP_       260   5-31-94   6:22a
    LCD      CP_      2793   5-31-94   6:22a
    MIRROR   CO_     11424   5-31-94   6:22a
    MSHERC   CO_      4086   5-31-94   6:22a
    PRINTER  SY_     10961   5-31-94   6:22a
    PRINTFIX COM       234   5-31-94   6:22a
    GORILLA  BA_     10439   5-31-94   6:22a
    REMLINE  BA_      4435   5-31-94   6:22a
    NIBBLES  BA_      7182   5-31-94   6:22a
    MONEY    BA_     13049   5-31-94   6:22a
    COMMANDS TX_     25400   5-31-94   6:22a
    SETUP    BAT     13208   5-31-94   6:22a
    SD6COPY  BAT       758   5-31-94   6:22a
    CHOICE   COM      1754   5-31-94   6:22a
    EXPAND   EXE     16129   5-31-94   6:22a
    GET_FUNC COM        24   5-31-94   6:22a
    NET      1X_      4704   5-31-94   6:22a
    NET      TX_      2656   5-31-94   6:22a
    NETBEUI  DO_     21122   5-31-94   6:22a
    NETWKSTA 1X_     38186   5-31-94   6:22a
    NETWKSTA 2X_     60768   5-31-94   6:22a
    REDIR    1X_     19627   5-31-94   6:22a
    REDIR    2X_     20033   5-31-94   6:22a
    SETNAME  EX_      3131   5-31-94   6:22a
    8514     VI_      6421   5-31-94   6:22a
    CGA      GR_      1617   5-31-94   6:22a
    CGA      IN_      2775   5-31-94   6:22a
    CGA      VI_      6131   5-31-94   6:22a
    DOSSHELL CO_      1907   5-31-94   6:22a
    DOSSHELL EX_    142511   5-31-94   6:22a
    DOSSHELL HL_     48773   5-31-94   6:22a
    DOSSWAP  EX_     13498   5-31-94   6:22a
    EGA      GR_      2466   5-31-94   6:22a
    EGA      IN_      2776   5-31-94   6:22a
    EGA      SY_      3684   5-31-94   6:22a
    EGA      VI_      6160   5-31-94   6:22a
    EGAMONO  GR_      2318   5-31-94   6:22a
    HERC     GR_      1636   5-31-94   6:22a
    HERC     VI_      6271   5-31-94   6:22a
    MONO     GR_       296   5-31-94   6:22a
    MONO     IN_      2451   5-31-94   6:22a
    VGA      GR_      3198   5-31-94   6:22a
    VGA      VI_      6355   5-31-94   6:22a
    VGAMONO  GR_      3214   5-31-94   6:22a
    720ID01  BAT       109   5-31-94   6:22a
    720ID02  BAT       109   5-31-94   6:22a
           69 file(s)     783356 bytes
                          655360 bytes free

### Directory of MS-DOS 6.22 (1.2M Boot)

     Volume in drive A has no label
     Directory of A:\

    IO       SYS*    40774   5-31-94   6:22a
    MSDOS    SYS*    38138   5-31-94   6:22a
    COMMAND  COM     54645   5-31-94   6:22a
    ANSI     SYS      9065   5-31-94   6:22a
    APPEND   EXE     10774   5-31-94   6:22a
    ASSIGN   COM      6399   5-31-94   6:22a
    ATTRIB   EXE     11208   5-31-94   6:22a
    BACKUP   EXE     36140   5-31-94   6:22a
    CHKDSK   EXE     12241   5-31-94   6:22a
    CHOICE   COM      1754   5-31-94   6:22a
    COMP     EXE     13084   5-31-94   6:22a
    COUNTRY  SYS     26936   5-31-94   6:22a
    DEBUG    EXE     15718   5-31-94   6:22a
    DELTREE  EXE     11111   5-31-94   6:22a
    DISKCOMP COM     10748   5-31-94   6:22a
    DISKCOPY COM     13335   5-31-94   6:22a
    DISPLAY  SYS     15789   5-31-94   6:22a
    DOSKEY   COM      5861   5-31-94   6:22a
    DRIVER   SYS      5406   5-31-94   6:22a
    EDLIN    EXE     12674   5-31-94   6:22a
    EGA      CPI     58870   5-31-94   6:22a
    EGA      SYS      4885   5-31-94   6:22a
    EMM386   EXE    120926   5-31-94   6:22a
    EXE2BIN  EXE      8424   5-31-94   6:22a
    FC       EXE     18650   5-31-94   6:22a
    FDISK    EXE     29336   5-31-94   6:22a
    FIND     EXE      6770   5-31-94   6:22a
    FORMAT   COM     22974   5-31-94   6:22a
    GRAFTABL COM     11205   5-31-94   6:22a
    GRAPHICS COM     19742   5-31-94   6:22a
    GRAPHICS PRO     21232   5-31-94   6:22a
    HIMEM    SYS     29136   5-31-94   6:22a
    ISO      CPI     49754   5-31-94   6:22a
    JOIN     EXE     17918   5-31-94   6:22a
    KEYB     COM     15750   5-31-94   6:22a
    KEYBOARD SYS     34598   5-31-94   6:22a
    LABEL    EXE      9390   5-31-94   6:22a
    LOADFIX  COM      1131   5-31-94   6:22a
    MEM      EXE     32502   5-31-94   6:22a
    MODE     COM     23569   5-31-94   6:22a
    MORE     COM      2545   5-31-94   6:22a
    MOUSE    COM     56408   5-31-94   6:22a
    MOVE     EXE     18319   5-31-94   6:22a
    NLSFUNC  EXE      7036   5-31-94   6:22a
    PRINT    EXE     15656   5-31-94   6:22a
    PRINTER  SYS     18804   5-31-94   6:22a
    RAMDRIVE SYS      5873   5-31-94   6:22a
    REPLACE  EXE     20274   5-31-94   6:22a
    RESTORE  EXE     38342   5-31-94   6:22a
    SETVER   EXE     12015   5-31-94   6:22a
    SHARE    EXE     10912   5-31-94   6:22a
    SMARTDRV EXE     45145   5-31-94   6:22a
    SORT     EXE      6938   5-31-94   6:22a
    SUBST    EXE     18526   5-31-94   6:22a
    SYS      COM      9432   5-31-94   6:22a
    TREE     COM      6945   5-31-94   6:22a
    XCOPY    EXE     16930   5-31-94   6:22a
    CONFIG   SYS        73   4-25-16   2:28p
    AUTOEXEC BAT        19   4-25-16   2:29p
           59 file(s)    1198754 bytes
                            1024 bytes free
